--- a/package.json
+++ b/package.json
@@ -1,8 +1,8 @@
 {
     "name": "cssSuggestions",
-    "displayName": "CSS Property and Value Suggestions",
+    "displayName": "CSS Suggestions",
     "description": "Suggestions for CSS properties and values.",
-    "version": "1.0.1",
+    "version": "1.0.2",
     "publisher": "kungfoowiz",
     "icon": "cssSuggestionsICO.ico",
     "repository": {
